--- a/Classwork/demo.htm
+++ b/Classwork/demo.htm
@@ -10,4 +10,6 @@
     <h6>This is header 6.</h6>
     <h2>This is the subtitle.</h2>
 
-    <p>This is the <i>first</i> 
+    <p>&#174</p>
+
+    <p><i>italicize</i></p>
