--- a/Classwork/CS01-InClass.htm
+++ b/Classwork/CS01-InClass.htm
@@ -13,6 +13,7 @@
         <p>I chose Babson because I knew I wanted to do business but wanted a school that had more of a set path for the first two years. I also liked how it was easier to find people who were doing the same concentration as you, which made it easier to network and ask for help. I want to work with data analysis when I graduate, but more specifically with food or restaurant data.</p>
         <p>My favorite sports are volleyball and tennis.</p>
         <hr/>
+        <img src="http://cdn.akc.org/content/article-body-image/corgi_taco_header_.jpg" alt="corgi taco" title="corgi taco">
 </body>
 
 </html>
