--- a/Classwork/index.htm
+++ b/Classwork/index.htm
@@ -16,7 +16,7 @@
         <img src="https://static1.squarespace.com/static/589bdb209de4bbe1a56ec004/t/58d179621b631bf0f6f31fba/1516738339242/Iowa+Volleyball+Elite+Skills+Clinic" alt="Volleyball" title="Volleyball" height="200">
         <img src="https://s.yimg.com/ny/api/res/1.2/Vdy.j5qPS8rp_2MTW97Vyw--~A/YXBwaWQ9aGlnaGxhbmRlcjtzbT0xO3c9ODAw/http://media.zenfs.com/en/homerun/feed_manager_auto_publish_494/e799592cb4af522670f8a876bc28e6d0" alt="Volleyball" title="Volleyball" height="200">
         <hr/>
-        <a href="C:\Users\cshi3\Desktop\MIS3690 - Web Technologies\WebTech\Classwork\low.htm"> low.htm</a>
+        <a href="C:\Users\cshi3\Desktop\MIS3690 - Web Technologies\WebTech\Classwork\low.htm"> List of Works</a>
 </body>
 
 </html>
