--- a/Classwork/low.htm
+++ b/Classwork/low.htm
@@ -10,7 +10,7 @@
 <body>
     <!-- Your HTML goes here -->
     <h1> List of Work - Tracey</h1>
-    <a href="C:\Users\cshi3\Desktop\MIS3690 - Web Technologies\WebTech\Classwork\CS01-InClass.htm"> CS01-InClass.htm</a>
+    <a href="C:\Users\cshi3\Desktop\MIS3690 - Web Technologies\WebTech\Classwork\CS01-InClass.htm"> CS01-InClass</a>
 </body>
 
 </html>
