--- a/Classwork/index.htm
+++ b/Classwork/index.htm
@@ -17,6 +17,7 @@
         <img src="https://s.yimg.com/ny/api/res/1.2/Vdy.j5qPS8rp_2MTW97Vyw--~A/YXBwaWQ9aGlnaGxhbmRlcjtzbT0xO3c9ODAw/http://media.zenfs.com/en/homerun/feed_manager_auto_publish_494/e799592cb4af522670f8a876bc28e6d0" alt="Volleyball" title="Volleyball" height="200">
         <hr/>
         <a href="../Classwork/low.htm"> List of Works</a>
+        <a href="mailto:cshi3@babson.edu"> Email Me</a>
 </body>
 
 </html>
