Added CS03 to low.htm

--- a/Classwork/low.htm
+++ b/Classwork/low.htm
@@ -10,9 +10,11 @@
 <body>
     <!-- Your HTML goes here -->
     <h1> List of Work - Tracey</h1>
-    <a href="../Classwork/CS01-InClass.htm"> CS01-InClass</a>
+    <a href="CS01-InClass.htm"> CS01-InClass</a>
     <hr/>
-    <a href="../Classwork/index.htm"> Index</a>
+    <a href="index.htm"> Index</a>
+    <hr/>
+    <a href="CS03-Inclass.htm"> CS03-InClass</a>
 </body>
 
 </html>
