--- a/Classwork/low.htm
+++ b/Classwork/low.htm
@@ -3,18 +3,51 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>List of Work - Tracey</title>
-
+    <title>
+        Work done in WebTech by Tracey
+    </title>
+    <style type="text/css">
+        body{
+            background-color: rgb(215, 200, 255);
+            margin: 0px 100px 0px 200px;
+        }
+        h1{
+            text-align: center;
+            color: navy;
+            font-family: arial;
+        }
+        h3{
+            font-family: arial;
+            color: navy;
+            font-size: 1.2em;
+        }
+        img{
+            width: 50px;
+        }
+        hr{
+            height: 5px;
+            background-color: rebeccapurple;
+            width: 100%;
+        }
+    </style>
 </head>
 
 <body>
-    <!-- Your HTML goes here -->
-    <h1> List of Work - Tracey</h1>
-    <a href="CS01-InClass.htm"> CS01-InClass</a>
-    <hr/>
-    <a href="index.htm"> Index</a>
-    <hr/>
-    <a href="CS03-Inclass.htm"> CS03-InClass</a>
+    <h1>
+        Work done in WebTech by Tracey
+    </h1>
+    <hr>
+    <h3>
+        <a href="CS01-InClass.htm">CS01 - InClass</a>
+        <br>
+        <a href="../Homework/index.htm">CS02 - InClass</a>
+        <br>
+        <a href="CS03-InClass.htm">CS03 - InClass</a>
+        <br>
+        <a href="../Homework/ProjectProposal.htm">Project Proposal</a>
+    </h3>
+    <hr>
+    <a href="../Homework/index.htm"><img src="home.jpg" alt="Home"></a>
 </body>
 
 </html>
