Added CS04 to LOW

--- a/Classwork/low.htm
+++ b/Classwork/low.htm
@@ -45,6 +45,8 @@
         <a href="CS03-InClass.htm">CS03 - InClass</a>
         <br>
         <a href="../Homework/ProjectProposal.htm">Project Proposal</a>
+        <br>
+        <a href="CS04-InClass.htm">CS04 - InClass</a>
     </h3>
     <hr>
     <a href="../Homework/index.htm"><img src="home.jpg" alt="Home"></a>
