--- a/Classwork/CS04-InClass.htm
+++ b/Classwork/CS04-InClass.htm
@@ -22,12 +22,17 @@
             text-align: center;
             z-index: 1;
         }
+        #low{
+            position: absolute;
+            bottom: 20px;
+            right: 20px;
+        }
     </style>
 </header>
 
 <body>
     <p>
-        <a href="../index.htm">back to index</a>
+        <a href="../Homework/index.htm">back to index</a>
     </p>
     <map name="middlesex"/>
         <area shape="rect" coords="301, 351, 330, 383" href="http://www.wellesleyma.gov/" alt="City of Wellesley" title="City of Wellesley" target="_blank"/>
@@ -61,5 +66,6 @@
     <h3>
         Go Beavers!
     <h3>
+    <a id="low" href="low.htm">List of Works</a>
 </body>
 </html>
