--- a/Classwork/low.htm
+++ b/Classwork/low.htm
@@ -40,13 +40,19 @@
     <h3>
         <a href="CS01-InClass.htm">CS01 - InClass</a>
         <br>
-        <a href="../Homework/index.htm">CS02 - InClass</a>
+        <a href="CS02-InClass.htm">CS02 - InClass</a>
         <br>
         <a href="CS03-InClass.htm">CS03 - InClass</a>
         <br>
-        <a href="../Homework/ProjectProposal.htm">Project Proposal</a>
-        <br>
         <a href="CS04-InClass.htm">CS04 - InClass</a>
+        <br>
+        <a href="CS05-InClass-1.htm">CS05 - InClass Part 1</a>
+        <br>
+        <a href="CS05-InClass-2.htm">CS05 - InClass Part 2</a>
+        <br>
+        <a href="../../TermProject/ProjectProposal.htm">Project Proposal</a>
+        <br>
+        <a href="../Homework/index.htm">Homework 1</a>
     </h3>
     <hr>
     <a href="../Homework/index.htm"><img src="home.jpg" alt="Home"></a>
