--- a/Classwork/CS05-InClass-2.htm
+++ b/Classwork/CS05-InClass-2.htm
@@ -21,6 +21,15 @@
             font-size: 1.5em;
             text-align: right;
         }
+        #yellowbackground{
+            background-color: yellow;
+        }
+        #greenbackground{
+            background-color: green;
+        }
+        #limebackground{
+            background-color: lime;
+        }
         hr {
             width: 75%;
             color: Maroon;
@@ -28,6 +37,20 @@
         p {
             color: Olive;
             font-family: cursive;
+        }
+        #greenfont{
+            color: green;
+        }
+        #border{
+            border: 3px dotted red;
+        }
+        .blue{
+            color: blue;
+            font-style: italic;
+            text-decoration: underline;
+        }
+        .WC{
+            font-size: 1.5em;
         }
         img {
             float: left;
@@ -44,6 +67,7 @@
 </head>
 
 <body>
+
     <h1>
         This line demonstrates H1
     </h1>
@@ -54,31 +78,37 @@
         This line shows how H3 will be different from H1 and H2
     </h3>
     <hr>
-    <h1>
-        Quote One from Winston Churchill
-    </h1>
-    <p>
-        Criticism may not be agreeable, but it is necessary. It fulfils the same function as pain in the human body. It calls attention
-        to an unhealthy state of things.
-    </p>
-    <h3>
-        Quote Two from Winston Churchill
-    </h3>
-    <p>
-        Courage is rightly esteemed the first of human qualities... because it is the quality which guarantees all others. Courage
-        is what it takes to stand up and speak; courage is also what it takes to sit down and listen.
-    </p>
-    <h2>
-        Quote Three from Winston Churchill
-    </h2>
-    <h3>
-        This paragraph will have a border
-    </h3>
-    <p>
-        Continuous effort - not strength or intelligence - is the key to unlocking our potential.
-    </p>
+    <div id="yellowbackground">
+        <h1>
+            Quote One from <span class="WC">W</span>inston <span class="WC">C</span>hurchill
+        </h1>
+        <p class="blue">
+            Criticism may not be agreeable, but it is necessary. It fulfils the same function as pain in the human body. It calls attention
+            to an unhealthy state of things.
+        </p>
+    </div>
+    <div id="greenbackground">
+        <h3 class="blue">
+            Quote Two from <span class="WC">W</span>inston <span class="WC">C</span>hurchill
+        </h3>
+        <p>
+            Courage is rightly esteemed the first of human qualities... because it is the quality which guarantees all others. Courage
+            is what it takes to stand up and speak; courage is also what it takes to sit down and listen.
+        </p>
+    </div>
+    <div id="limebackground">
+        <h2 id="greenfont">
+            Quote Three from <span class="WC">W</span>inston <span class="WC">C</span>hurchill
+        </h2>
+        <h3>
+            This paragraph will have a border
+        </h3>
+        <p id="border">
+            Continuous effort - not strength or intelligence - is the key to unlocking our potential.
+        </p>
+    </div>
     <hr>
-    <p>
+    <p class="blue">
         The tiger (Panthera tigris) is the largest cat species, reaching a total body length of up to 3.3 metres (11 ft) and weighing
         up to 306 kg (670 lb). It is the third largest land carnivore (behind only the Polar bear and the Brown bear).
         Its most recognizable feature is a pattern of dark vertical stripes on reddish-orange fur with lighter underparts.
@@ -87,7 +117,7 @@
     </p> 
     <img src="images/tiger1.jpg" alt="Tiger">
     <p>
-        In zoos, tigers have lived for 20 to 26 years, which
+            In zoos, tigers have lived for 20 to 26 years, which
         also seems to be their longevity in the wild.[5] They are territorial and generally solitary but social animals,
         often requiring large contiguous areas of habitat that support their prey requirements. This, coupled with the
         fact that they are indigenous to some of the more densely populated places on Earth, has caused significant conflicts
