--- a/Homework/index.htm
+++ b/Homework/index.htm
@@ -29,7 +29,7 @@
         img{
             float: left;
             margin: 0px 50px;
-            height: 200px;
+            height: 250px;
         }
         body{
             background-color: rgb(144, 125, 252);
@@ -41,6 +41,11 @@
             color: rgb(182, 169, 255);
             background-color: rgb(182, 169, 255);
             border-color: rgb(182, 169, 255);
+        }
+        #low{
+            position: absolute;
+            bottom: 20px;
+            right: 20px;
         }
     </style>
 </head>
@@ -78,6 +83,6 @@
         I love playing <a href="http://www.volleyball.com/">volleyball</a> and <a href="http://www.tennis.com/">tennis</a> during the summer. And then when it gets colder during the winter months I love to <a href="https://www.goodreads.com/">read</a> books and <a href="https://www.yummly.com/">cook</a> warm meals and desserts.
     </p>
     <hr>
-    <a href="../Classwork/low.htm">My Work in WebTech</a>
+    <a id="low" href="../Classwork/low.htm">My Work in WebTech</a>
 </body>
 </html>
