--- a/Classwork/low.htm
+++ b/Classwork/low.htm
@@ -50,6 +50,12 @@
         <br>
         <a href="CS05-InClass-2.htm">CS05 - InClass Part 2</a>
         <br>
+        <a href="CS06-InClass-1.htm">CS06 - InClass Part 1</a>
+        <br>
+        <a href="CS06-InClass-2.htm">CS06 - InClass Part 2</a>
+        <br>
+        <a href="CS06-InClass-Table-1.htm">CS06 - In Class - Table Part 1</a>
+        <br>
         <a href="../../TermProject/ProjectProposal.htm">Project Proposal</a>
         <br>
         <a href="../Homework/index.htm">Homework 1</a>
