--- a/Classwork/CS05-InClass-2.htm
+++ b/Classwork/CS05-InClass-2.htm
@@ -58,11 +58,6 @@
             padding: 10px;
             margin: 30px 30px 10px 10px;
         }
-        #low{
-            position: absolute;
-            bottom: 20px;
-            right: 20px;
-        }
 </style>
 </head>
 
@@ -132,7 +127,7 @@
         than 1,184,911 km2 (457,497 sq mi), a 41% decline from the area estimated in the mid-1990s.[7]
     </p>
     <hr>
-    <a id="low" href="low.htm">List of Works</a>
+    <a href="low.htm">List of Works</a>
 </body>
 
 </html>
