--- a/Classwork/low.htm
+++ b/Classwork/low.htm
@@ -54,7 +54,9 @@
         <br>
         <a href="CS06-InClass-2.htm">CS06 - InClass Part 2</a>
         <br>
-        <a href="CS06-InClass-Table-1.htm">CS06 - In Class - Table Part 1</a>
+        <a href="CS06-InClass-Table-1.htm">CS06 - InClass - Table Part 1</a>
+        <br>
+        <a href="CS07-InClass.htm">CS07 - InClass</a>
         <br>
         <a href="../../TermProject/ProjectProposal.htm">Project Proposal</a>
         <br>
