--- a/Classwork/low.htm
+++ b/Classwork/low.htm
@@ -58,6 +58,8 @@
         <br>
         <a href="CS07-InClass.htm">CS07 - InClass</a>
         <br>
+        <a href="CS08-InClass.htm">CS08 - InClass</a>
+        <br>
         <a href="../../TermProject/ProjectProposal.htm">Project Proposal</a>
         <br>
         <a href="../Homework/index.htm">Homework 1</a>
