--- a/Classwork/low.htm
+++ b/Classwork/low.htm
@@ -62,6 +62,8 @@
         <br>
         <a href="../../TermProject/ProjectProposal.htm">Project Proposal</a>
         <br>
+        <a href="minimalistmacros.com">MinimalistMacros.com</a>
+        <br>
         <a href="../Homework/index.htm">Homework 1</a>
     </h3>
     <hr>
