--- a/Homework/HW02-1.htm
+++ b/Homework/HW02-1.htm
@@ -60,7 +60,7 @@
 </header>
 
 <body>
-    <h1>Exclusive Gifts for All Occasions<h1>
+    <h1>Exclusive Gifts for All Occasions</h1>
     <table>
         <tr id="firstrow">
             <td colspan="4">
