--- a/Classwork/CS11-InClass.htm
+++ b/Classwork/CS11-InClass.htm
@@ -55,14 +55,13 @@
         <p id = "newP" onclick="capitalize()">
             Test the new paragraph.
         </p>
-
         <script type="text/javascript">
             function capitalize(){
                 let x = document.getElementById("newP");
                 x.style.textTransform = "capitalize";
             }
         </script>
-
+        <a href="low.htm">List of Works</a>
     </body>
 
 </html>
