--- a/Classwork/CS12-InClass.htm
+++ b/Classwork/CS12-InClass.htm
@@ -31,6 +31,7 @@
         <p><img id="first" src="images/usa.png" alt="Image goes here" title="map of USA" width="400" onmouseover="enlarge(this.id)" onmouseout="shrink(this.id)"></p>
         <hr>
         <p><img id="second" src="images/class.jpg" width="400" onmouseover="enlarge(this.id)" onmouseout="shrink(this.id)"></p>
+        <a href="low.htm">List of Works</a>
     </body>
 
 </html>
