--- a/Classwork/low.htm
+++ b/Classwork/low.htm
@@ -60,6 +60,14 @@
         <br>
         <a href="CS08-InClass.htm">CS08 - InClass</a>
         <br>
+        <a href="CS11-InClass.htm">CS11 - InClass</a>
+        <br>
+        <a href="CS12-InClass.htm">CS12 - InClass</a>
+        <br>
+        <a href="CS13-Practice.htm">CS13 - Practice</a>
+        <br>
+        <a href="CS13-InClass.htm">CS13 - InClass</a>
+        <br>
         <a href="../../TermProject/ProjectProposal.htm">Project Proposal</a>
         <br>
         <a href="minimalistmacros.com">MinimalistMacros.com</a>
