--- a/Classwork/CS14-InClass1.htm
+++ b/Classwork/CS14-InClass1.htm
@@ -24,6 +24,7 @@
         <p>The winning numbers are: </p>
         <p id="winning-numbers"></p>
     </form>
+    <a href="low.htm">List of Works</a>
 </body>
 
 </html>
