--- a/Classwork/CS14-InClass2.htm
+++ b/Classwork/CS14-InClass2.htm
@@ -72,6 +72,7 @@
 				<input id="clr" value="Clear" name="reset" type="reset">
 			</p>
 		</form>
+		<a href="low.htm">List of Works</a>
 	</body>
 
 </html>
