--- a/Classwork/CS14-Quiz.htm
+++ b/Classwork/CS14-Quiz.htm
@@ -5,7 +5,6 @@
     <head>
         <meta charset="UTF-8">
         <title>CS14 - Quiz</title>
-
         <style type="text/css">
             h1, h2, h3 {
                 text-align: center;
@@ -69,19 +68,14 @@
                 must disappear and the other two circles must change to the original colors; when you click the first
                 two circles, the red circle must re-appear.</p>
         </div>
-
         <hr />
         <h2 id="header2">Play with circles</h2>
         <div class="main">
-
             <div class="circle" id="green-circle" onclick="change(this.id)"></div>
-
             <div class="circle" id="blue-circle" onclick="change(this.id)"></div>
-
             <div class="circle" id="red-circle" onclick="change(this.id)"></div>
-
         </div>
-
+        <a href="low.htm">List of Works</a>
     </body>
 
 </html>
