--- a/Classwork/low.htm
+++ b/Classwork/low.htm
@@ -10,14 +10,17 @@
         body{
             background-color: rgb(215, 200, 255);
             margin: 0px 100px 0px 200px;
+            font-family: helvetica;
         }
         h1{
             text-align: center;
             color: navy;
-            font-family: arial;
+        }
+        h2{
+            color: navy;
+            font-size: 18pt;
         }
         h3{
-            font-family: arial;
             color: navy;
             font-size: 1.2em;
         }
@@ -37,6 +40,7 @@
         Work done in WebTech by Tracey
     </h1>
     <hr>
+    <h2>Classwork</h2>
     <h3>
         <a href="CS01-InClass.htm">CS01 - InClass</a>
         <br>
@@ -68,11 +72,27 @@
         <br>
         <a href="CS13-InClass.htm">CS13 - InClass</a>
         <br>
+        <a href="CS14-InClass1.htm">CS14 - InClass Part 1</a>
+        <br>
+        <a href="CS14-InClass2.htm">CS14 - InClass Part 2</a>
+        <br>
+        <a href="CS14-Quiz.htm">CS14 - Quiz</a>
+    </h3>
+    <h2>Homework</h2>
+    <h3>
+        <a href="../Homework/HW01.htm">Homework 1</a>
+        <br>
+        <a href="../Homework/HW02-1.htm">Homework 2 Part 1</a>
+        <br>
+        <a href="../Homework/HW02-2.htm">Homework 2 Part 2</a>
+        <br>
+        <a href="../Homework/HW03.htm">Homework 3</a>
+    </h3>
+    <h2>Term Project</h2>
+    <h3>
         <a href="../../TermProject/ProjectProposal.htm">Project Proposal</a>
         <br>
         <a href="minimalistmacros.com">MinimalistMacros.com</a>
-        <br>
-        <a href="../Homework/index.htm">Homework 1</a>
     </h3>
     <hr>
     <a href="../Homework/index.htm"><img src="home.jpg" alt="Home"></a>
