--- a/Homework/HW01.htm
+++ b/Homework/HW01.htm
@@ -42,11 +42,6 @@
             background-color: rgb(182, 169, 255);
             border-color: rgb(182, 169, 255);
         }
-        #low{
-            position: absolute;
-            bottom: 20px;
-            right: 20px;
-        }
     </style>
 </head>
 <body>
@@ -83,6 +78,6 @@
         I love playing <a href="http://www.volleyball.com/">volleyball</a> and <a href="http://www.tennis.com/">tennis</a> during the summer. And then when it gets colder during the winter months I love to <a href="https://www.goodreads.com/">read</a> books and <a href="https://www.yummly.com/">cook</a> warm meals and desserts.
     </p>
     <hr>
-    <a id="low" href="../Classwork/low.htm">My Work in WebTech</a>
+    <a href="../Classwork/low.htm">List of Works</a>
 </body>
 </html>
