--- a/Classwork/low.htm
+++ b/Classwork/low.htm
@@ -77,6 +77,10 @@
         <a href="CS14-InClass2.htm">CS14 - InClass Part 2</a>
         <br>
         <a href="CS14-Quiz.htm">CS14 - Quiz</a>
+        <br>
+        <a href="CS15-InClass1.htm">CS15 - InClass Part 1</a>
+        <br>
+        <a href="CS15-InClass2.htm">CS15 - InClass Part 2</a>
     </h3>
     <h2>Homework</h2>
     <h3>
