--- a/Classwork/Session 18 Quiz.htm
+++ b/Classwork/Session 18 Quiz.htm
@@ -30,7 +30,7 @@
                 let result=0;
                 let numbers = [];
                 for (let i=from; i<=to; i++){
-                    numbers.push(i);
+                    //numbers.push(i);
                     result = result + (numbers[i] * numbers[i]);
                 }
                 document.getElementById("result").innerHTML = String(result);
