--- a/Homework/HW04-1.htm
+++ b/Homework/HW04-1.htm
@@ -35,17 +35,20 @@
                 var word2 = ["will", "can", "must"];
                 var word3 = ["eat.", "study.", "play."];
                 var form = document.getElementById("form");
-                if (form.word1.value == "" || form.word2.value == "" || form.word3.value == ""){
+                var random1 = word1[Math.floor(Math.random() * word1.length)];
+                var random2 = word2[Math.floor(Math.random() * word2.length)];
+                var random3 = word3[Math.floor(Math.random() * word3.length)];
+                form.results.value = random1 + " " + random2 + " " + random3;
+                return false;
+            }
+            function display(){
+                var form = document.getElementById("form");
+                 if (form.word1.value == "" || form.word2.value == "" || form.word3.value == ""){
                     alert("Please select all options.");
                 }
                 else if (form.word1.value != "" && form.word2.value != "" && form.word3.value != ""){
-                    //form.results.value = form.word1.value + " " + form.word2.value + " " + form.word3.value;
-                    var random1 = word1[Math.floor(Math.random() * word1.length)];
-                    var random2 = word2[Math.floor(Math.random() * word2.length)];
-                    var random3 = word3[Math.floor(Math.random() * word3.length)];
-                    form.results.value = random1 + " " + random2 + " " + random3;
+                    form.results.value = form.word1.value + " " + form.word2.value + " " + form.word3.value;
                 }
-                return false;
             }
         </script>
     </head>
@@ -89,7 +92,7 @@
                 </select>
             </p>
             <p>
-                <select name="word3">
+                <select onchange="display()" name="word3">
                     <option selected value="">Select Word 3</option>
                     <option value="eat."> eat.</option>
                     <option value="study."> study.</option>
