hw4 change var to let

--- a/Homework/HW04-2.htm
+++ b/Homework/HW04-2.htm
@@ -38,8 +38,8 @@
 		<script type="text/javascript">
 			var i = 20;
 			function countdown(){
-				var number = document.getElementById("number");
-				var endingValue = document.getElementById("endingValue");
+				let number = document.getElementById("number");
+				let endingValue = document.getElementById("endingValue");
 				if (i > endingValue.value){
 					i--;
 					number.innerHTML = i;
