--- a/Homework/HW04-1.htm
+++ b/Homework/HW04-1.htm
@@ -31,18 +31,18 @@
         </style>
         <script type="text/javascript">
             function generate(){
-                var word1 = ["I", "We", "They"];
-                var word2 = ["will", "can", "must"];
-                var word3 = ["eat.", "study.", "play."];
-                var form = document.getElementById("form");
-                var random1 = word1[Math.floor(Math.random() * word1.length)];
-                var random2 = word2[Math.floor(Math.random() * word2.length)];
-                var random3 = word3[Math.floor(Math.random() * word3.length)];
+                let word1 = ["I", "We", "They"];
+                let word2 = ["will", "can", "must"];
+                let word3 = ["eat.", "study.", "play."];
+                let form = document.getElementById("form");
+                let random1 = word1[Math.floor(Math.random() * word1.length)];
+                let random2 = word2[Math.floor(Math.random() * word2.length)];
+                let random3 = word3[Math.floor(Math.random() * word3.length)];
                 form.results.value = random1 + " " + random2 + " " + random3;
                 return false;
             }
             function display(){
-                var form = document.getElementById("form");
+                let form = document.getElementById("form");
                  if (form.word1.value == "" || form.word2.value == "" || form.word3.value == ""){
                     alert("Please select all options.");
                 }
